--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">npj</string>
+    <string name="app_name">农品街</string>
     <string name="SecKill">限时秒杀</string>
     <string name="presell">新品预售</string>
     <string name="local_seller">附近商家</string>
